--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   nanoid: ^1.0.0
   intl: ^0.17.0
   simple_gradient_text: ^1.2.2
+  enum_to_string: ^2.0.1
 
 dev_dependencies:
   flutter_test:
