--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   simple_gradient_text: ^1.2.2
   enum_to_string: ^2.0.1
   tap_debouncer: ^2.0.2
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
