--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   enum_to_string: ^2.0.1
   tap_debouncer: ^2.0.2
   clipboard: ^0.1.3
+  shared_preferences: ^2.0.12
 
 dev_dependencies:
   flutter_test:
