--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   tap_debouncer: ^2.0.2
   clipboard: ^0.1.3
   shared_preferences: ^2.0.12
+  url_launcher: ^6.0.18
 
 dev_dependencies:
   flutter_test:
