--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   clipboard: ^0.1.3
   shared_preferences: ^2.0.12
   url_launcher: ^6.0.18
+  table_calendar: ^3.0.3
 
 dev_dependencies:
   flutter_test:
