--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,3 +67,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics'
 }
+
+apply plugin: 'com.google.firebase.crashlytics'
