--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^2.0.12
   url_launcher: ^6.0.18
   table_calendar: ^3.0.3
+  firebase_crashlytics: ^2.6.0
 
 dev_dependencies:
   flutter_test:
