--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   url_launcher: ^6.0.18
   table_calendar: ^3.0.3
   firebase_crashlytics: ^2.6.0
+  flutter_facebook_auth: ^4.1.2
 
 dev_dependencies:
   flutter_test:
