--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   table_calendar: ^3.0.3
   firebase_crashlytics: ^2.6.0
   flutter_facebook_auth: ^4.1.2
+  page_transition: ^2.0.5
 
 dev_dependencies:
   flutter_test:
