--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.1.5-beta+7
+version: 0.2.1-beta+8
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -31,6 +31,7 @@ dependencies:
   firebase_crashlytics: ^2.6.0
   flutter_facebook_auth: ^4.1.2
   page_transition: ^2.0.5
+  firebase_messaging: ^11.2.13
 
 dev_dependencies:
   flutter_test:
