--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_facebook_auth: ^4.1.2
   page_transition: ^2.0.5
   firebase_messaging: ^11.2.13
+  skeleton_loader: ^2.0.0+4
 
 dev_dependencies:
   flutter_test:
